# scratchcpp-player

./: .gitmodules  CMakeLists.txt  README.md
.ci/: build_appimage.sh  build_qt6.sh  install_cross_compiler.sh  macos_build.sh  prepare_cross_build.sh  qt6_deps.sh  windows_installer.sh
.ci/common/: build.sh
.github/: config.env
.github/workflows/: linux-build.yml  macos-build.yml  release.yml  utests.yml  windows-build.yml
release/: appimage.desktop
release/win_installer/: build.sh  env.sh  update_repo.sh
release/win_installer/config/: config.xml  controller.qs  style.qss
res/icons/: CMakeLists.txt  index.theme
res/macos-release/: scratchcpp-player.icns  scratchcpp-player.json
src/: CMakeLists.txt  main.cpp  main.qml
src/app/: CMakeLists.txt  app.cpp  app.h  appmenubar.cpp  appmenubar.h  libraryinfo.cpp  libraryinfo.h  main.cpp  main.qml
src/app/qml/: Colors.qml  main.qml
src/app/qml/dialogs/: AboutDialog.qml  PreferencesDialog.qml  ProjectSettingsDialog.qml
src/global/: CMakeLists.txt  globalmodule.cpp  globalmodule.h  iappinfo.h  ifilepaths.h  isettings.h
src/global/internal/: appinfo.cpp  appinfo.h  filepaths.cpp  filepaths.h  settings.cpp  settings.h
src/global/modularity/: imoduleexportinterface.h  imodulesetup.h  ioc.h  modulesioc.h
src/global/test/: CMakeLists.txt  appinfo.cpp  fakedependency.h  fakeexport.h  modularity.cpp  settings.cpp  setup.cpp
src/global/test/mocks/: filepathsmock.h  moduleexportinterfacemock.h  modulesetupmock.h
src/keyboard/: CMakeLists.txt  ikeyboardinfo.h  keyboardmodule.cpp  keyboardmodule.h
src/keyboard/internal/: keyboardinfo.cpp  keyboardinfo.h
src/ui/: CMakeLists.txt  ithemeengine.h  iuiengine.h  uimodule.cpp  uimodule.h
src/ui/internal/: themeengine.cpp  themeengine.h  uiengine.cpp  uiengine.h
src/ui/test/: CMakeLists.txt  themeengine.cpp  uiengine.cpp
src/ui/test/mocks/: settingsmock.h
src/uicomponents/: AccentButton.qml  CMakeLists.txt  ColorButton.qml  CustomButton.qml  CustomDialog.qml  CustomMenu.qml  CustomMenuBar.qml  CustomMenuItem.qml  CustomMenuSeparator.qml  CustomMessageDialog.qml  CustomToolButton.qml  HoverToolTip.qml  IconLabel.qml  dialogview.cpp  dialogview.h  filedialog.cpp  filedialog.h  menubarmodel.cpp  menubarmodel.h  menuitemmodel.cpp  menuitemmodel.h  menumodel.cpp  menumodel.h  uicomponentsmodule.cpp  uicomponentsmodule.h
src/uicomponents/internal/: CustomDialogButtonBox.qml  quickwindow.cpp  quickwindow.h
src/uicomponents/test/: CMakeLists.txt  dialogview.cpp  filedialog.cpp  menubarmodel.cpp  menuitemmodel.cpp  menumodel.cpp  quickwindow.cpp
test/: main.cpp
